force-app/main/default/objects/Ozempic__c/Ozempic__c.object-meta.xml
<CustomObject>
    <label>Ozempic</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ozempics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>