force-app/main/default/objects/Ozempic__c/fields/Date_of_Gastrointestinal_Injury_Diagnosi__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Gastrointestinal_Injury_Diagnosi__c</fullName>
    <label>Date of Gastrointestinal Injury Diagnosi</label>
    <type>Date</type>
</CustomField>