force-app/main/default/objects/Ozempic__c/fields/Declination_Letter_Received__c.field-meta.xml
<CustomField>
    <fullName>Declination_Letter_Received__c</fullName>
    <label>Declination Letter Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes (DNQ)</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>