force-app/main/default/objects/Ozempic__c/fields/Diagnosed_with_Gastrointestinal_Injury__c.field-meta.xml
<CustomField>
    <fullName>Diagnosed_with_Gastrointestinal_Injury__c</fullName>
    <label>Diagnosed with Gastrointestinal Injury?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>