force-app/main/default/objects/Ozempic__c/fields/Diagnosis_of_Gastrointestinal_Injury__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_of_Gastrointestinal_Injury__c</fullName>
    <label>Diagnosis of Gastrointestinal Injury</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>