force-app/main/default/objects/Ozempic__c/fields/Facility_Physician_Address__c.field-meta.xml
<CustomField>
    <fullName>Facility_Physician_Address__c</fullName>
    <label>Facility/Physician Address</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>