force-app/main/default/objects/Ozempic__c/fields/Gastroinjury_Treatment_Providers__c.field-meta.xml
<CustomField>
    <fullName>Gastroinjury_Treatment_Providers__c</fullName>
    <label>Gastroinjury Treatment Providers</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>