force-app/main/default/objects/Ozempic__c/fields/Gastroinjury_Treatment_Providers_Address__c.field-meta.xml
<CustomField>
    <fullName>Gastroinjury_Treatment_Providers_Address__c</fullName>
    <label>Gastroinjury Treatment Providers Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>