force-app/main/default/objects/Ozempic__c/fields/Incarcerated_Status__c.field-meta.xml
<CustomField>
    <fullName>Incarcerated_Status__c</fullName>
    <label>Incarcerated Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes (DNQ)</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>