force-app/main/default/objects/Ozempic__c/fields/Injured_s_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Injured_s_Date_of_Birth__c</fullName>
    <label>Injured&apos;s Date of Birth</label>
    <type>Date</type>
</CustomField>