force-app/main/default/objects/Ozempic__c/fields/Injured_s_Relationship_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Injured_s_Relationship_to_Client__c</fullName>
    <label>Injured&apos;s Relationship to Client</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>