force-app/main/default/objects/Ozempic__c/fields/Injured_s_SSN__c.field-meta.xml
<CustomField>
    <fullName>Injured_s_SSN__c</fullName>
    <label>Injured&apos;s SSN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>