force-app/main/default/objects/Ozempic__c/fields/Injury_After_Antidiabetic_Use__c.field-meta.xml
<CustomField>
    <fullName>Injury_After_Antidiabetic_Use__c</fullName>
    <label>Injury After Antidiabetic Use</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Overnight hospitalization for gastrointestinal problem</fullName>
            </value>
            <value>
                <fullName>2 or more ER visits for gastrointestinal problem in a 2 month time period</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>