force-app/main/default/objects/Ozempic__c/fields/Is_Injured_deceased__c.field-meta.xml
<CustomField>
    <fullName>Is_Injured_deceased__c</fullName>
    <label>Is Injured deceased</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>