force-app/main/default/objects/Ozempic__c/fields/Legal_Authority_for_Deceased__c.field-meta.xml
<CustomField>
    <fullName>Legal_Authority_for_Deceased__c</fullName>
    <label>Legal Authority for Deceased</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Legal Authority for Deceased</fullName>
            </value>
            <value>
                <fullName>POA</fullName>
            </value>
            <value>
                <fullName>Next of Kin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>