force-app/main/default/objects/Ozempic__c/fields/Medication_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Medication_Start_Date__c</fullName>
    <label>Medication Start Date</label>
    <type>Date</type>
</CustomField>