force-app/main/default/objects/Ozempic__c/fields/Medication_Stop_Date__c.field-meta.xml
<CustomField>
    <fullName>Medication_Stop_Date__c</fullName>
    <label>Medication Stop Date</label>
    <type>Date</type>
</CustomField>