force-app/main/default/objects/Ozempic__c/fields/Medication_Usage_Status__c.field-meta.xml
<CustomField>
    <fullName>Medication_Usage_Status__c</fullName>
    <label>Medication Usage Status&quot;</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No (DNQ)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>