force-app/main/default/objects/Ozempic__c/fields/No_Attorney_Representation_in_this_Case__c.field-meta.xml
<CustomField>
    <fullName>No_Attorney_Representation_in_this_Case__c</fullName>
    <label>No Attorney Representation in this Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No (DNQ)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>