force-app/main/default/objects/Ozempic__c/fields/Pharmacy_Address__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Address__c</fullName>
    <label>Pharmacy Address</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>