force-app/main/default/objects/Ozempic__c/fields/Prescribed_Dosage_and_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Prescribed_Dosage_and_Frequency__c</fullName>
    <label>Prescribed Dosage and Frequency</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>