force-app/main/default/objects/Ozempic__c/fields/Prescribing_Facility_Physician_Name__c.field-meta.xml
<CustomField>
    <fullName>Prescribing_Facility_Physician_Name__c</fullName>
    <label>Prescribing Facility/Physician Name</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>