force-app/main/default/objects/Ozempic__c/fields/Prescription_Pharmacy_Name__c.field-meta.xml
<CustomField>
    <fullName>Prescription_Pharmacy_Name__c</fullName>
    <label>Prescription Pharmacy Name</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>