force-app/main/default/objects/Ozempic__c/fields/Reason_for_Medication__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Medication__c</fullName>
    <label>Reason for Medication</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Diabetes management</fullName>
            </value>
            <value>
                <fullName>Weight loss</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>