force-app/main/default/objects/Ozempic__c/fields/Received_Treatment_for_Gastroinjury__c.field-meta.xml
<CustomField>
    <fullName>Received_Treatment_for_Gastroinjury__c</fullName>
    <label>Received Treatment for Gastroinjury</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>