force-app/main/default/objects/Ozempic__c/fields/Semaglutide_Use__c.field-meta.xml
<CustomField>
    <fullName>Semaglutide_Use__c</fullName>
    <label>Semaglutide Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No (DNQ)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>