force-app/main/default/objects/Ozempic__c/fields/State_of_death__c.field-meta.xml
<CustomField>
    <fullName>State_of_death__c</fullName>
    <label>State of death</label>
    <length>255</length>
    <type>Text</type>
</CustomField>