force-app/main/default/objects/Ozempic__c/fields/Symptoms_Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>Symptoms_Begin_Date__c</fullName>
    <label>Symptoms Begin Date</label>
    <type>Date</type>
</CustomField>