force-app/main/default/objects/Ozempic__c/fields/Symptoms_Resolve_Date__c.field-meta.xml
<CustomField>
    <fullName>Symptoms_Resolve_Date__c</fullName>
    <label>Symptoms Resolve Date</label>
    <type>Date</type>
</CustomField>